--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <div class="body-container">
       <div id="content-container">
         <div id="header-logo">
-          <img src="/images/logo-white2.png"/>
+          <a href="http://www.appliedsystems.com/"><img src="./images/logo-white2.png"/></a>
         </div>
 
         <div class="webinar-header">
@@ -40,7 +40,7 @@
             </p>
           </div>
           <div class="content-right">
-           <img id="stockphoto" src="/images/girl2.jpg"/>
+           <img id="stockphoto" src="./images/girl2.jpg"/>
           </div>
         </div>
 
@@ -73,7 +73,7 @@
       </div>
         <div class="footer">
           <p>@ 2015 Applied Systems Inc</p>
-          <img src="/images/biglogo2.png"/>
+          <a href="http://www.appliedsystems.com/"><img src="./images/biglogo2.png"/></a>
         </div>
 
       </div> <!-- content container-->
